--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "multra",
   "version": "0.1.0",
-  "homepage": "https://mulfranck.github.io/multra/"
+  "homepage": "https://mulfranck.github.io/multra/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
     "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
