--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "poetlines",
   "version": "0.1.0",
-  "homepage": "https://mulfranck.github.io/poetlines/",
   "private": true,
+  "homepage": "https://poetlines.vercel.app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -10,7 +10,6 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
-    "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
@@ -22,8 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "vercel --prod"
   },
   "eslintConfig": {
     "extends": [
