--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "homepage": "https://poetlines.vercel.app",
   "dependencies": {
+    "@supabase/supabase-js": "^2.1.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "dotenv": "^16.0.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
